Shawn: imported services descriptions and prices as a JSON object called services.js for use in state management. Also linked Book Now button to Booking page hosted via Square

--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -182,7 +182,7 @@ ul {
     margin-top: 5rem;
     opacity: 100%;
     animation-name: fadeIn;
-    animation-duration: 4s;
+    animation-duration: 3s;
     animation-timing-function: ease-in;
     animation-iteration-count: 1;
     animation-direction: normal;
@@ -190,7 +190,7 @@ ul {
 
   .vintage-scissors {
     animation-name: fadeIn;
-    animation-duration: 3s;
+    animation-duration: 2s;
     animation-timing-function: ease-in;
     animation-iteration-count: 1;
     animation-direction: normal;
@@ -324,7 +324,7 @@ ul {
   margin: auto;
   padding: 35px;
   animation-name: fadeIn;
-  animation-duration: 4s;
+  animation-duration: 3s;
   animation-timing-function: ease-in;
   animation-iteration-count: 1;
   animation-direction: normal;
@@ -408,7 +408,7 @@ ul {
   }
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 460px) {
   .aboutContent h1 {
     font-size: 28px;
   }
@@ -435,7 +435,8 @@ ul {
   height: 880px;
   background-color: #000000;
   color: #ffffff;
-  width: 100%;
+  padding: 25px;
+  text-align: center;
 }
 
 /*##########END SERVICES STYLES##########*/
